--- a/frontend/scss/_config.scss
+++ b/frontend/scss/_config.scss
@@ -41,7 +41,8 @@ $max-width: 1100px;
     @content;
   }
 }
-
+//set-text-color function detects the lightness
+//if lightness is less greater than 70 return inverse
 @function set-text-color($color) {
   @if (lightness($color) >70) {
     @return $dark;
